Not perfect but fix checkbox bounce on Safari.

--- a/Jony/resources/screen.less
+++ b/Jony/resources/screen.less
@@ -429,7 +429,8 @@ div.mw-body {
 	}
 	.mw-ui-checkbox:not( #noop ) input[type='checkbox'] {
 		opacity: 1;
-		width: 1.1em;
+		width: auto;
+		height: auto;
 	}
 	.mw-ui-checkbox:not( #noop ) input[type='checkbox'] + label:before {
 		display: none;
